changed home url

--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 NEXT_PUBLIC_APP_SERVER=https://bus-ticket-server.onrender.com
 
 TOKEN_KEY=B3C0NBUS!N3GR0UP
+
+NEXT_PUBLIC_HOME_URL=https://bus-client-b1fe32.netlify.app/
