--- a/dockerfile.production
+++ b/dockerfile.production
@@ -22,13 +22,11 @@ WORKDIR /app
 COPY --from=deps /app/node_modules ./node_modules
 COPY . .
 
-ENV NEXT_PUBLIC_APP_HOST=https://server.app.mybus.et
+ENV NEXT_PUBLIC_HOME_URL=https://bus-client.onrender.com
 
-ENV NEXT_PUBLIC_HOME_URL=https://app.mybus.et
+ENV TOKEN_KEY=B3C0NBUS!N3GR0UP
 
-ENV NEXT_PUBLIC_APP_SERVER=server
-
-ENV NEXT_PUBLIC_APP_PORT=5000
+ENV NEXT_PUBLIC_APP_SERVER=https://bus-ticket-server.onrender.com
 # Next.js collects completely anonymous telemetry data about general usage.
 # Learn more here: https://nextjs.org/telemetry
 # Uncomment the following line in case you want to disable telemetry during the build.
